--- a/all/requirements.txt
+++ b/all/requirements.txt
@@ -1,7 +1,10 @@
-Flask==2.3.2
-Werkzeug>=2.3.3
-googletrans==4.0.0rc1
+Flask==2.3.3
+Werkzeug==2.3.7
+googletrans==3.1.0a0
+python-dotenv==1.0.0
 
-# Flask-Mail==0.9.1         # For email integration (optional)
-# python-docx==1.1.0        # If you want to read .docx files
-# chatterbot==1.0.5         # If you switch to a chatbot library
+# Optional dependencies
+# Flask-Mail==0.9.1         # For email integration
+# python-docx==1.1.0        # For reading .docx files  
+# chatterbot==1.0.5         # For advanced chatbot functionality
+# requests==2.31.0          # For API integrations
