--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "compression": "^1.8.1",
+    "compromise": "^14.14.4",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "natural": "^8.1.0",
     "nodemailer": "^6.10.1",
     "validator": "^13.15.15"
   },
